# liscopelens

./: .gitignore  README.en.md  README.md  SCANCODE_LICENSE_UPGRADE.md  TODO.md  pyproject.toml  test_eftool_license.py  test_hvigor_all_stages.py  test_hvigor_complete.py  test_hvigor_parser.py  test_license_upgrade.py
doc/: 设计文档.md
examples/: filter.py  test-1.toml  test-2.toml  test-3.toml
lic_compatible_tool/: app.py  constants.py
lic_compatible_tool/checker/: __init__.py  compatible.py  infer.py
lic_compatible_tool/parser/: c_parser.py  parser.py
lic_compatible_tool/resources/: licenses_feature.json
lic_compatible_tool/utils/: __init__.py  graph.py  licenses.py  scaffold.py
lict/: __init__.py  app.py  checker.py  constants.py  infer.py
lict/config/: default.toml  user_config.toml
lict/parser/: __init__.py  base.py  compatible.py  echo.py  exception.py  propagate.py  scancode.py
lict/parser/Test_parser/: Test_parser.py  entry.py  user_config.toml
lict/parser/c_parser/: build_gn_parser.py  build_gn_parser_wasted.py  entry.py  include_parser.py
lict/parser/sbom_parser/: entry.py  sbom_parser.py
lict/parser/user_parser/: echo.py  (+2 more)
lict/resources/: AAL.toml  APSL-2.0.toml  Apache-1.0.toml  BSD-2-Clause.toml  BSD-3-Clause.toml  Beerware.toml  CECILL-1.0.toml  CPAL-1.0.toml  CUA-OPL-1.0.toml  ECL-2.0.toml  EFL-2.0.toml  ERLPL-1.1.toml  EUPL-1.2.toml  Fair.toml  Frameworx-1.0.toml  GFDL-1.3-or-later.toml  GPL-1.0-or-later.toml  GPL-2.0-only.toml  GPL-2.0-or-later.toml  HPND.toml  ICU.toml  Intel.toml  LGPL-2.1-only.toml  LPPL-1.3c.toml  MIT.toml  MS-PL.toml  NCSA.toml  NGPL.toml  OCLC-2.0.toml  ODbL.toml  OLDAP-2.8.toml  OPL-1.0.toml  OSL-2.0.toml  PDDL-1.0.toml  PHP-3.0.toml  PostgreSQL.toml  RSCPL.toml  SGI-B-2.0.toml  SPL-1.0.toml  Unlicense.toml  (+7 more)
lict/utils/: __init__.py  graph.py  scaffold.py  structure.py
liscopelens/: __init__.py  app.py  checker.py  constants.py
liscopelens/config/: hvigor.toml
liscopelens/parser/: __init__.py  base.py  compatible.py  exception.py  propagate.py  scancode.py
liscopelens/resources/: test_template.gml  test_template.json
liscopelens/utils/: fs.py  graph.py  sda.py  structure.py
tests/: result.toml  test.py
(+94 files in other folders)
