[tool.poetry]
name = "lict"
version = "0.1.1"
description = "A tool to analyze the compatibility of licenses in a project."
authors = ["Bird <bird@lzu.edu.cn>", "ZI0N <liuza20@lzu.edu.cn>", "Zihao Zhang <zhzihao2023@lzu.edu.cn>"]
readme = "README.md"
include = [ 
    { path = "lict/resources/*.toml", format = ["sdist", "wheel"] },
    { path = "lict/resources/*.gml", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.2.1"
toml = "^0.10.2"
rich = "^14.0.0"
textual = "^3.0.1"

[tool.poetry.scripts]
lict = "lict.app:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

